<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <EditText
            android:layout_width="155dp"
            android:layout_height="47dp"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/new_expense_montant"
            android:hint="@string/expense_value"
            android:layout_marginTop="72dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.379"/>
    <Button
            android:text="Ajouter"
            android:layout_width="234dp"
            android:layout_height="75dp"
            android:id="@+id/btn_add_expense"
            android:backgroundTint="@color/colorPrimary" android:textSize="18sp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="404dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.565"
            android:textColor="#FFFFFF" android:textColorHint="#88FFFFFF"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/new_expense_desc"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/description"
            android:layout_marginTop="48dp" app:layout_constraintTop_toBottomOf="@+id/new_expense_montant"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/new_expense_date"
            android:onClick="showDatePickerDialogNewExpense"
            android:hint="@string/date"
            android:layout_marginBottom="8dp"
            android:focusable="false"
            app:layout_constraintBottom_toTopOf="@+id/btn_add_expense" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/new_expense_desc"/>

</androidx.constraintlayout.widget.ConstraintLayout>