<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="viewModel"
                type="com.mag.cospend.expenses.NewExpenseViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:id="@+id/expenses_individual">


    <TextView
            android:text="1"
            android:layout_width="91dp"
            android:layout_height="56dp"
            android:id="@+id/tv_expenses_you" android:textSize="24sp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="64dp"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@+id/tv_you_expenses_text" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.631"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/expense_list_you"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/tv_difference"
            app:layout_constraintVertical_bias="0.896"/>
    <TextView
            android:text="@string/dollar"
            android:layout_width="47dp"
            android:layout_height="56dp"
            android:id="@+id/tv_number6" android:textSize="24sp"
            android:gravity="center"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_difference"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.75"/>
    <TextView
            android:text="@string/dollar"
            android:layout_width="47dp"
            android:layout_height="56dp"
            android:id="@+id/tv_number7" android:textSize="24sp"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@+id/tv_expenses_you"
            android:layout_marginStart="12dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/expense_list_you" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_number6" app:layout_constraintVertical_bias="0.812"/>
    <TextView
            android:text="12"
            android:layout_width="91dp"
            android:layout_height="59dp"
            android:id="@+id/tv_difference" android:textSize="24sp"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@+id/tv_number2"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:layout_width="213dp"
            android:layout_height="59dp"
            android:id="@+id/tv_number2" android:textSize="24sp"
            android:text="@string/difference"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="right|center_vertical" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="12dp"/>
    <TextView
            android:layout_width="217dp"
            android:layout_height="59dp"
            android:id="@+id/tv_you_expenses_text" android:textSize="24sp"
            android:gravity="right|center_vertical"
            android:text="@string/your_expenses" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/tv_number2"/>
    <ListView
            android:layout_width="414dp"
            android:layout_height="467dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.555"
            android:id="@+id/expense_list_you"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/tv_you_expenses_text"
            app:layout_constraintVertical_bias="0.126"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true" app:srcCompat="@android:drawable/ic_input_add"
            android:id="@+id/floatingActionButton"
            app:maxImageSize="48dp" android:tint="#FFFFFF"
            app:backgroundTint="@color/colorPrimary"
            android:onClick="@{() -> viewModel.onFabClicked()}"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tv_you_expenses_text"
            android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="@+id/tv_number2"/>

    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar_you" android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/expense_list_you" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/expense_list_you"/>
</androidx.constraintlayout.widget.ConstraintLayout>


</layout>